[gd_scene load_steps=3 format=2]

[ext_resource path="res://LizardGame/Sprites/WhiteCircle8.png" type="Texture" id=1]
[ext_resource path="res://LizardGame/World/Player/Effects/BloodParticles.gd" type="Script" id=2]

[node name="BloodParticles" type="CPUParticles2D"]
z_index = -20
z_as_relative = false
amount = 32
lifetime = 3.0
explosiveness = 1.0
texture = ExtResource( 1 )
spread = 60.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 1.0
scale_amount = 0.1
scale_amount_random = 0.2
color = Color( 0.67451, 0.156863, 0.278431, 1 )
script = ExtResource( 2 )

[node name="StopProcessingTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
autostart = true

[node name="DisapearTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="StopProcessingTimer" to="." method="_on_StopProcessingTimer_timeout"]
[connection signal="timeout" from="DisapearTimer" to="." method="_on_DisapearTimer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
